--- a/daw/proUno/proDos.html
+++ b/daw/proUno/proDos.html
@@ -40,7 +40,7 @@
         <li><a href="#2.6">Comentarios al código</a></li>
       </ol>
     </div>
-  <section> <!-- INTRO -->
+   <!-- INTRO -->
     <a name="2.0"></a>
     <h3 class="subTitulo_3">Introducción</h3>
     <article class="articuloApuntes">
@@ -54,8 +54,8 @@
       </ul>
     </article>
     <a class="btnArriba" href="#top">Arriba</a>
-  </section>
-  <section> <!-- PUNTO 2.1 -->
+  
+   <!-- PUNTO 2.1 -->
     <a name="2.1"></a>
     <h3 class="subTitulo_3">Bloques de un programa informático</h3>
     <article class="articuloApuntes">
@@ -100,8 +100,8 @@
       </p>
     </article>
     <a class="btnArriba" href="#top">Arriba</a>
-  </section>
-  <section> <!-- PUNTO 2.2 -->  
+  
+   <!-- PUNTO 2.2 -->  
     <a name="2.2"></a>
     <h3 class="subTitulo_3">Variables. Usos y Tipos</h3>
     <article class="articuloApuntes">
@@ -151,8 +151,8 @@
       <p>No es buena prática utilizar variables globales. El problema es que se crean dependencias ocultas. Cuando la aplicación es grande, no se conoce los objetos que tiene ni sus relaciones.</p>
     </article>
     <a class="btnArriba" href="#top">Arriba</a>
-  </section>
-  <section> <!-- PUNTO 2.3 -->
+  
+   <!-- PUNTO 2.3 -->
     <a name="2.3"></a>
     <h3 class="subTitulo_3">Constantes y Literales. Tipos y utilidades</h3>
     <h4 class="subTitulo_4">Constantes</h4>
@@ -192,8 +192,8 @@
       </ul>
     </article>
     <a class="btnArriba" href="#top">Arriba</a>
-  </section>
-  <section> <!-- PUNTO 2.4 -->
+  
+   <!-- PUNTO 2.4 -->
     <a name="2.4"></a>
     <h3 class="subTitulo_3">Operadores del lenguaje de programación</h3>
     <h4 class="subTitulo_4">Operadores aritméticos</h4>
@@ -361,8 +361,8 @@
       <p>El operador de desigualdad != devuelve true si sus operadores son distintos.</p>
     </article>
     <a class="btnArriba" href="#top">Arriba</a>
-  </section>
-  <section> <!-- PUNTO 2.5 -->
+  
+   <!-- PUNTO 2.5 -->
     <a name="2.5"></a>
     <h3 class="subTitulo_3">Conversiones de tipos de clase</h3>
     <article class="articuloApuntes">
@@ -421,8 +421,8 @@
       </table>
     </article>
     <div class="btnArriba"><a href="#top">Arriba</a></div>
-  </section>
-  <section> <!-- PUNTO 2.6 -->
+  
+   <!-- PUNTO 2.6 -->
     <a name="2.6"></a>
     <h3 class="subTitulo_3">Comentario al código</h3>
     <article class="articuloApuntes">
@@ -434,7 +434,7 @@
       <p>El uso de comentarios es muy útil, se aconseja su uso para documentar correctamente el código.</p>
     </article>
     <a class="btnArriba" href="#top">Arriba</a>
-  </section>
+  
   </div> <!-- FIN CONTENEDOR -->
 </body>
 </html>
