--- a/daw/proUno/programUno.html
+++ b/daw/proUno/programUno.html
@@ -41,7 +41,7 @@
         <li><a href="#1.7">Lenguajes compilados e interpretados</a></li>
       </ol>
     </div>
-  <section> <!-- INTRO -->
+   <!-- INTRO -->
     <h3 class="subTitulo_3">Introducción</h3>
     <article class="articuloApuntes">
       <p>
@@ -79,8 +79,8 @@
       </ul>
     </article>
     <a class="btnArriba" href="#top">Arriba</a>
-  </section>
-  <section> <!-- PUNTO 1.1 -->
+  
+   <!-- PUNTO 1.1 -->
     <a name="1.1"></a>
     <h3 class="subTitulo_3">Representaciones gráficas</h3>
     <article class="articuloApuntes">
@@ -121,8 +121,8 @@
       </p>
     </article>
     <a class="btnArriba" href="#top">Arriba</a>
-  </section>
-  <section> <!-- PUNTO 1.2 -->
+  
+   <!-- PUNTO 1.2 -->
     <a name="1.2"></a>
     <h3 class="subTitulo_3">Características de los diagramas de flujo</h3>
     <article class="articuloApuntes">
@@ -138,8 +138,8 @@
       <p>La otra herramienta para representar algoritmos es el pseudocódigo, que es la manera de representar distintas sentencias que va a realizar nuestro algoritomo. Este no se puede ejecutar en una máquina.</p>
     </article>
     <a class="btnArriba" href="#top">Arriba</a>
-  </section>
-  <section> <!-- PUNTO 1.3 -->
+  
+   <!-- PUNTO 1.3 -->
     <a name="1.3"></a>
     <h3 class="subTitulo_3">Características del pseudocódigo</h3>
     <article class="articuloApuntes">
@@ -152,8 +152,8 @@
       </ul>
     </article>
     <a class="btnArriba" href="#top">Arriba</a>
-  </section>
-  <section> <!-- PUNTO 1.4 -->
+  
+   <!-- PUNTO 1.4 -->
     <a name="1.4"></a>
     <h3 class="subTitulo_3">Comunicación de un sistema informático</h3>
     <article class="articuloApuntes">
@@ -171,8 +171,8 @@
       <p>Implementararemos código con lenguajes de alto nivel para el cual necesitaremos traducción para convertir dicho programa en lenguaje máquina.</p>
     </article>
     <a class="btnArriba" href="#top">Arriba</a>
-  </section>
-  <section> <!-- PUNTO 1.5 -->
+  
+   <!-- PUNTO 1.5 -->
     <a name="1.5"></a>
     <h3 class="subTitulo_3">Características del lenguaje de alto nivel</h3>
     <article class="articuloApuntes">
@@ -184,8 +184,8 @@
       </ul>
     </article>
     <a class="btnArriba" href="#top">Arriba</a>
-  </section>
-  <section> <!-- PUNTO 1.6 -->
+  
+   <!-- PUNTO 1.6 -->
     <a name="1.6"></a>
     <h3 class="subTitulo_3">Características del lenguaje de bajo nivel</h3>
     <article class="articuloApuntes">
@@ -199,8 +199,8 @@
       <p>La estructura de un programa informático y sus elementos principales son las variables, las constantes y los distintos operadores.</p>
     </article>
     <a class="btnArriba" href="#top">Arriba</a>
-  </section>
-  <section> <!-- PUNTO 1.7 -->
+  
+   <!-- PUNTO 1.7 -->
     <a name="1.7"></a>
     <h3 class="subTitulo_3">Lenguajes compilados e interpretados</h3>
     <article class="articuloApuntes">
@@ -232,7 +232,7 @@
       </ul>
     </article>
     <a class="btnArriba" href="#top">Arriba</a>
-  </section>
+  
   </div> <!-- FIN CONTENEDOR -->
 </body>
 </html>
