--- a/daw/sistemas/temaCinco.html
+++ b/daw/sistemas/temaCinco.html
@@ -31,8 +31,7 @@
     </div>
   </header>
   <!--*************************************************************-->
-  <div class="contenedor">
-  <section>
+  <section class="tema">
     <div class="indice">
       <ol>
         <li><a href="#5.1">Equipos de dominio</a></li>
@@ -44,9 +43,9 @@
         <li><a href="#5.7">Directivas de grupo. Derechos de usuarios. Directivas de seguridad. Objetos de directiva. Ámbito de las directivas. Plantillas</a></li>
       </ol>
     </div>
-  </section>
+  
   <!--*************************************************************-->
-    <section>
+    
       <article class="articuloApuntes">
         <h3 class="subTitulo_3">Introducción</h3>
       </article>
@@ -93,6 +92,5 @@
       <a class="btnArriba" href="#top">Arriba</a>
     </article>
   </section>
-  </div>
 </body>
 </html> 
