--- a/daw/sistemas/temaCuatro.html
+++ b/daw/sistemas/temaCuatro.html
@@ -31,8 +31,7 @@
     </div>
   </header>
   <!--*************************************************************-->
-  <div class="contenedor">
-  <section>
+  <section class="tema">
     <div class="indice">
       <ol>
         <li><a href="#4.1">Estructura cliente-servidor</a></li>
@@ -48,9 +47,9 @@
         <li><a href="#4.11">Instalación de Windows Server y Ubuntu Server</a></li>
       </ol>
     </div>
-  </section>
+  
   <!--*************************************************************-->
-  <section>
+  
     <a name="4.1"></a>
     <h3 class="subTitulo_3">>Introducción</h3>
     <article class="articuloApuntes">
@@ -80,9 +79,9 @@
       </p>
     </article>
     <a class="btnArriba" href="#top">Arriba</a>
-  </section>
+  
   <!--*************************************************************-->
-  <section>
+  
     <a name="4.2"></a>
     <h3 class="subTitulo_3">Protocolo LDAP</h3>
     <article class="articuloApuntes">
@@ -132,9 +131,9 @@
       </p>
     </article>
     <a class="btnArriba" href="#top">Arriba</a>
-  </section>
+  
   <!--*************************************************************-->
-  <section>
+  
     <a name="4.3"></a>
     <h3 class="subTitulo_3">Concepto de dominio. Subdominios. Requisitos necesarios para montar un dominio</h3>
     <article class="articuloApuntes">
@@ -220,9 +219,9 @@
       </p>
     </article>
     <a class="btnArriba" href="#top">Arriba</a>
-  </section>
+  
   <!--*************************************************************-->
-  <section>
+  
     <a name="4.4"></a>
     <h3 class="subTitulo_3">Conceptos clave de Active Directory</h3>
     <article class="articuloApuntes">
@@ -301,9 +300,9 @@
       </p>
     </article>
     <a class="btnArriba" href="#top">Arriba</a>
-  </section>
+  
   <!--*************************************************************-->
-  <section>
+  
     <a name="4.5"></a>
     <h3 class="subTitulo_3">Administración de cuentas. Cuentas predeterminadas</h3>
     <article class="articuloApuntes">
@@ -347,9 +346,9 @@
       </p>
     </article>
     <a class="btnArriba" href="#top">Arriba</a>
-  </section>
+  
   <!--*************************************************************-->
-  <section>
+  
     <a name="4.6"></a>
     <h3 class="subTitulo_3">Contraseñas. Bloqueos de cuenta. Cuentas de usuarios y equipos</h3>
     <article class="articuloApuntes">
@@ -378,9 +377,9 @@
       </p>
     </article>
     <a class="btnArriba" href="#top">Arriba</a>
-  </section>
+  
   <!--*************************************************************-->
-  <section>
+  
     <a name="4.7"></a>
     <h3 class="subTitulo_3">Perfiles móviles y obligatorios</h3>
     <article class="articuloApuntes">
@@ -406,9 +405,9 @@
       </p>
     </article>
     <a class="btnArriba" href="#top">Arriba</a>
-  </section>
+  
   <!--*************************************************************-->
-  <section>
+  
     <a name="4.8"></a>
     <h3 class="subTitulo_3">Carpetas personales</h3>
     <article class="articuloApuntes">
@@ -423,9 +422,9 @@
       </p>
     </article>
     <a class="btnArriba" href="#top">Arriba</a>
-  </section>
+  
   <!--*************************************************************-->
-  <section>
+  
     <a name="4.9"></a>
     <h3 class="subTitulo_3">Plantillas de usuario. Variables de entorno</h3>
     <article class="articuloApuntes">
@@ -466,9 +465,9 @@
       </ul>
     </article>
     <a class="btnArriba" href="#top">Arriba</a>
-  </section>
+  
   <!--*************************************************************-->
-  <section>
+  
     <a name="4.10"></a>
     <h3 class="subTitulo_3">Administración de grupos. Tipo. Estrategias de anidamiento. Grupos predeterminados</h3>
     <article class="articuloApuntes">
@@ -525,9 +524,9 @@
       </p>
     </article>
     <a class="btnArriba" href="#top">Arriba</a>
-  </section>
+  
   <!--*************************************************************-->
-  <section>
+  
     <a name="4.11"></a>
     <h3 class="subTitulo_3">Instalación de Windows Server y Ubuntu Server</h3>
     <article class="articuloApuntes">
@@ -571,6 +570,5 @@
     </article>
     <a class="btnArriba" href="#top">Arriba</a>
   </section>
-  </div>
 </body>
 </html> 
