--- a/daw/sistemas/temaDos.html
+++ b/daw/sistemas/temaDos.html
@@ -31,10 +31,9 @@
     </div>
   </header>
   <!--*************************************************************-->
-  <div class="contenedor">
-  <section>
+  <!--*************************************************************-->
+  <section class="tema">
     <div class="indice">
-      
       <ol>
         <li><a href="#2.1">Administración de usuarios y grupos locales</a></li>
         <li><a href="#2.2">Seguridad de cuentas de usuario</a></li>
@@ -46,16 +45,16 @@
         <li><a href="#2.8">Principales comandos de sistemas operativos libres y propietarios</a></li>
       </ol>
     </div>
-  </section>
+  
   <!--*************************************************************-->
-  <section>
+  
     <h3 class="subTitulo_3">Introducción</h3>
     <article class="articuloApuntes">
       <p>El <b>software base</b> es el programa encargado de controlar el ordenador.</p>
     </article>
-  </section>
+  
   <!--*************************************************************-->
-  <section>
+  
     <a name="2.1"></a>
     <h3 class="subTitulo_3">Administración de usuarios y grupos locales</h3>
     <article class="articuloApuntes">
@@ -126,9 +125,9 @@
       </ul>
     </article>
     <a class="btnArriba" href="#top">Arriba</a>
-  </section>
+  
   <!--*************************************************************-->
-  <section>
+  
     <a name="2.2"></a>
     <h3 class="subTitulo_3">Seguridad de cuentas de usuario</h3>
     <article class="articuloApuntes">
@@ -146,9 +145,9 @@
       <p>Si un virus infecta cuando utilizamos la cuenta administrador, resulta más difícil de eliminar, al tener control total del equipo. En una cuenta estándar la limitación de permisos reducirá sus efectos nocivos.</p>
     </article>
     <a class="btnArriba" href="#top">Arriba</a>
-  </section>
+  
   <!--*************************************************************-->
-  <section>
+  
     <a name="2.3"></a>
     <h3 class="subTitulo_3">Seguridad de contraseñas</h3>
     <article class="articuloApuntes">  
@@ -181,9 +180,9 @@
       <p>El perfil se crea automaticacmente al darlos de alta o cuando inician sesión por primera vez. No obstante, el administrador podrá crear perfiles idóneos y asignarlos las cuentas.</p>
     </article>
     <a class="btnArriba" href="#top">Arriba</a>
-  </section>
+  
   <!--*************************************************************-->
-  <section>
+  
     <a name="2.4"></a>
     <h3 class="subTitulo_3">Configuración del protocolo TCP/IP. Direcciones IP y máscaras de subred</h3>
     <article class="articuloApuntes">
@@ -248,9 +247,9 @@
       <p>Señalar que la versión 4 del protocolo IP (IPv4) permite algo más de 4000 millones de direcciones distintas. Los S.O. más recientes incorporan el IPv6 que admite muchas más direcciones.</p>
     </article>
     <a class="btnArriba" href="#top">Arriba</a>
-  </section>
+  
   <!--*************************************************************-->
-  <section>
+  
     <a name="2.5"></a>
     <h3 class="subTitulo_3">Servicio de Nombres de Dominios (DNS)</h3>
     <article class="articuloApuntes">
@@ -261,9 +260,9 @@
       <p>No solo basta con escoger los servidores más rápidos, sino que además es necesario configurar nuestro S.O. correctamente.</p>
     </article>
     <a class="btnArriba" href="#top">Arriba</a>
-  </section>
+  
   <!--*************************************************************-->
-  <section>
+  
   <a name="2.6"></a>
     <h3 class="subTitulo_3">Archivos de configuración de red</h3>  
     <article class="articuloApuntes">  
@@ -281,9 +280,9 @@
       <p>Una vez configurada la dirección IP, máscara de subred y servidores DNS, aceptar. La información se guarda en los archivos de configuración del sistema. La configuración de linux se almacena en /etc/network/interfaces.</p>
     </article>
     <a class="btnArriba" href="#top">Arriba</a>
-  </section>
+  
   <!--*************************************************************-->
-  <section>
+  
   <a name="2.7"></a>
     <h3 class="subTitulo_3">Optimización de sistemas para ordenadores portátiles. Archivos de red sin conexión</h3>  
     <h4 class="subTitulo_4">Los pórtatiles poseen unas características propias que debemos tener en cuenta:</h4>
@@ -314,9 +313,9 @@
       <p>También es importante tener encuenta que si abandonamos el lugar desde el que nos conectarmos a la red, los archivos que se encuentren accesibles a través de ella dejarán de estar disponibles. Para solucionarlo tendremos que pulsar sobre el archivo o carpeta con el botón secundario del ratón y elegir <b>Siempre disponible sin conexión</b>.</p>
     </article>
     <a class="btnArriba" href="#top">Arriba</a>
-  </section>
+  
   <!--*************************************************************-->
-  <section>
+  
   <a name="2.8"></a>
     <h3 class="subTitulo_3">Principales comandos de sistemas operativos libres y propietarios</h3>  
     <article class="articuloApuntes">
@@ -378,6 +377,5 @@
     </article>
     <a class="btnArriba" href="#top">Arriba</a>
   </section>
-  </div>
 </body>
 </html> 
