--- a/daw/sistemas/temaSeis.html
+++ b/daw/sistemas/temaSeis.html
@@ -31,8 +31,7 @@
     </div>
   </header>
   <!--*************************************************************-->
-  <div class="contenedor">
-  <section>
+  <section class="tema">
     <div class="indice">
       <ol>
         <li><a href="#6.1">Interpretación, análisis y elaboración de documentación técnica. Interpretación, análisis y elaboración de manuales de instalación</a></li>
@@ -43,9 +42,9 @@
         <li><a href="#6.6">Administración remota</a></li>
       </ol>
     </div>
-  </section>  
+    
   <!--*************************************************************-->
-  <section>
+  
     <article class="articuloApuntes">
       <h3 class="subTitulo_3">Introducción</h3>
     </article>
@@ -85,8 +84,6 @@
       <h3 class="subTitulo_3">Administración remota</h3>
       <a class="btnArriba" href="#top">Arriba</a>
     </article>
-  <!--*************************************************************-->
   </section>
-  </div>
 </body>
 </html> 
