--- a/daw/sistemas/temaTres.html
+++ b/daw/sistemas/temaTres.html
@@ -31,8 +31,7 @@
     </div>
   </header>
   <!--*************************************************************-->
-  <div class="contenedor">
-  <section>
+  <section class="tema">
     <div class="indice">
       <ol>
         <li><a href="#3.1">Sistemas de archivos</a></li>
@@ -48,9 +47,9 @@
         <li><a href="#3.11">Herramientas de administración de discos. Particiones y volúmenes. Desfragmentación y revisión</a></li>
       </ol>
     </div>
-  </section>
+  
   <!--*************************************************************-->
-  <section>
+  
     <a name="3.1"></a>
     <h3 class="subTitulo_3">Introducción</h3>
     <article class="articuloApuntes">
@@ -98,9 +97,9 @@
       </p>
     </article>
     <a class="btnArriba" href="#top">Arriba</a>
-  </section>
+  
   <!--*************************************************************-->
-  <section>
+  
     <a name="3.2"></a>
     <h3 class="subTitulo_3">Tipos de sitemas de archivos</h3>
     <article class="articuloApuntes">
@@ -136,9 +135,9 @@
       </p>
     </article>
     <a class="btnArriba" href="#top">Arriba</a>
-  </section>
+  
   <!--*************************************************************-->
-  <section>
+  
     <a name="3.3"></a>
     <h3 class="subTitulo_3">Gestión de sitemas de archivos mediante comandos y entornos gráficos</h3>
     <article class="articuloApuntes">
@@ -214,9 +213,9 @@
       </p>
     </article>
     <a class="btnArriba" href="#top">Arriba</a>
-  </section>
+  
   <!--*************************************************************-->
-  <section>
+  
     <a name="3.4"></a>
     <h3 class="subTitulo_3">Gestión de enlaces</h3>
     <article class="articuloApuntes">
@@ -256,9 +255,9 @@
       </p>
     </article>
     <a class="btnArriba" href="#top">Arriba</a>
-  </section>
+  
   <!--*************************************************************-->
-  <section>
+  
     <a name="3.5"></a>
     <h3 class="subTitulo_3">Estructura de directorios de sistemas operativos libres y propietarios</h3>
     <article class="articuloApuntes">
@@ -389,9 +388,9 @@
       </p>
     </article>
     <a class="btnArriba" href="#top">Arriba</a>
-  </section>
+  
   <!--*************************************************************-->
-  <section>
+  
     <a name="3.6"></a>
     <h3 class="subTitulo_3">Búsqueda de información del sistema mediante comandos y herramientas gráficas</h3>
     <article class="articuloApuntes">
@@ -426,9 +425,9 @@
       </p>
     </article>
     <a class="btnArriba" href="#top">Arriba</a>
-  </section>
+  
   <!--*************************************************************-->
-  <section>
+  
     <a name="3.7"></a>
     <h3 class="subTitulo_3">Identificación del software instalado mediante comandos y herramientas gráficas</h3>
     <article class="articuloApuntes">
@@ -440,9 +439,9 @@
       </p>
     </article>
     <a class="btnArriba" href="#top">Arriba</a>
-  </section>
+  
   <!--*************************************************************-->
-  <section>
+  
     <a name="3.8"></a>
     <h3 class="subTitulo_3">Gestión de la información del sistema. Rendimiento. Estadística</h3>
     <article class="articuloApuntes">
@@ -460,9 +459,9 @@
       </p>
     </article>
     <a class="btnArriba" href="#top">Arriba</a>
-  </section>
+  
   <!--*************************************************************-->
-  <section>
+  
     <a name="3.9"></a>
     <h3 class="subTitulo_3">Montaje y desmontaje de dispositivos en sistemas operativos</h3>
     <article class="articuloApuntes">
@@ -483,9 +482,9 @@
       <p>umount < dispositivo > </p>
     </article>
     <a class="btnArriba" href="#top">Arriba</a>
-  </section>
+  
   <!--*************************************************************-->
-  <section>
+  
     <a name="3.10"></a>
     <h3 class="subTitulo_3">Automatización</h3>
     <article class="articuloApuntes">
@@ -528,9 +527,9 @@
       </p>
     </article>
     <a class="btnArriba" href="#top">Arriba</a>
-  </section>
+  
   <!--*************************************************************-->
-  <section>
+  
     <a name="3.11"></a>
     <h3 class="subTitulo_3">Herramientas de administración de discos. Particiones y volúmenes. Desfragmentación y revisión</h3>
     <article class="articuloApuntes">
@@ -552,6 +551,5 @@
     </article>
     <a class="btnArriba" href="#top">Arriba</a>
   </section>
-  </div>
 </body>
 </html> 
