--- a/daw/proUno/proCinco.html
+++ b/daw/proUno/proCinco.html
@@ -29,7 +29,7 @@
       <h1>Tema 5.- Gestión de ficheros</h1>
     </div>
   </header>
-  <div class="contenedor">
+  <section class="tema">
     <div class="indice">
       <ol>
         <li><a href="#5.1">Concepto y tipos de ficheros</a></li>
@@ -574,7 +574,6 @@
       </ul>
     </article>
     <a class="btnArriba" href="#top">Arriba</a>
-  
-  </div>
+  </section>
 </body>
 </html>
