--- a/daw/proUno/proCuatro.html
+++ b/daw/proUno/proCuatro.html
@@ -29,7 +29,7 @@
       <h1>Tema 4.- Programación Modular</h1>
     </div>
   </header> 
-  <div class="contenedor">
+  <section class="tema">
     <div class="indice">
       <ol>
         <li><a href="#4.1">Concepto</a></li>
@@ -423,7 +423,6 @@
       </p>
     </article>
     <a class="btnArriba" href="#top">Arriba</a>
-  
-  </div>
+  </section>
 </body>
 </html>
