--- a/daw/proUno/proDos.html
+++ b/daw/proUno/proDos.html
@@ -28,8 +28,8 @@
     <div class="tituloTema">
       <h1>Tema 2.- Estructura de un programa informático</h1>
     </div>
-  </header> <!-- CONTENEDOR -->
-  <div class="contenedor">
+  </header>
+  <section class="tema">
     <div class="indice">
       <ol>
         <li><a href="#2.1">Bloques de un programa de código</a></li>
@@ -434,7 +434,6 @@
       <p>El uso de comentarios es muy útil, se aconseja su uso para documentar correctamente el código.</p>
     </article>
     <a class="btnArriba" href="#top">Arriba</a>
-  
-  </div> <!-- FIN CONTENEDOR -->
+  </section>
 </body>
 </html>
