--- a/daw/proUno/proTres.html
+++ b/daw/proUno/proTres.html
@@ -29,7 +29,7 @@
       <h1>Tema 3.- Programación Estructurada</h1>
     </div>
   </header>
-  <div class="contenedor">
+  <section class="tema">
     <div class="indice">     
       <ul>
         <li><a href="#3.1">Fundamentos de programación</a></li>
@@ -720,7 +720,6 @@
       </ul>
     </article>
     <a class="btnArriba" href="#top">Arriba</a>
-  
-  </div>
+  </section>
 </body>
 </html>
