--- a/daw/proUno/programUno.html
+++ b/daw/proUno/programUno.html
@@ -28,8 +28,8 @@
     <div class="tituloTema">
       <h1>Tema 1.- Introducción a la programación</h1>
     </div>
-  </header><!-- CONTENEDOR --> 
-  <div class="contenedor">
+  </header>
+  <section class="tema">
     <div class="indice"> <!-- INDICE -->
       <ol>
         <li><a href="#1.1">Representaciones gráficas</a></li>
@@ -232,7 +232,6 @@
       </ul>
     </article>
     <a class="btnArriba" href="#top">Arriba</a>
-  
-  </div> <!-- FIN CONTENEDOR -->
+  </section>
 </body>
 </html>
