--- a/daw/proUno/proCinco.html
+++ b/daw/proUno/proCinco.html
@@ -11,7 +11,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Titan+One&display=swap" rel="stylesheet">
   <title>Programación I</title>
 </head>
-<body>
+<body class="principal">
   <header>
     <a name="top"></a>
     <div class="navtop">
