--- a/daw/sistemas/sistemInfor.html
+++ b/daw/sistemas/sistemInfor.html
@@ -11,7 +11,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Titan+One&display=swap" rel="stylesheet">
   <title>Sistemas Informáticos</title>
 </head>
-<body class="principal">
+<body class="apuntes">
   <header>
     <a name="top"></a>
     <div class="navtop">
