--- a/daw/sistemas/temaCuatro.html
+++ b/daw/sistemas/temaCuatro.html
@@ -16,40 +16,31 @@
     <a name="top"></a>
     <div class="navtop">
       <span>Sistemas Informáticos</span>
-      <span><a href="../../index.html">Principal</a></span>
-    </div>
-    <div class="menuPrincipalAsignatura">
-      <a href="./sistemInfor.html">Tema 1</a>
-      <a href="./temaDos.html">Tema 2</a>
-      <a href="./temaTres.html">Tema 3</a>
-      <a href="./temaCuatro.html">Tema 4</a>
-      <a href="./temaCinco.html">Tema 5</a>
-      <a href="./temaSeis.html">Tema 6</a>
-    </div>
-    <div class="tituloTema">
-      <h1>Tema 4.- Administración de dominios</h1>
+      <!--NUEVO MENU-->
+      <nav>
+        <ul class="navHorizontal">
+          <li>
+            <a href="../../index.html">Principal</a>
+            <ul class="navVertical">
+              <li><a href="./sistemInfor.html">Tema 1</a></li>
+              <li><a href="./temaDos.html">Tema 2</a></li>
+              <li><a href="./temaTres.html">Tema 3</a></li>
+              <li><a href="./temaCuatro.html">Tema 4</a></li>
+              <li><a href="./temaCinco.html">Tema 5</a></li>
+              <li><a href="./temaSeis.html">Tema 6</a></li>
+            </ul>
+          </li>
+        </ul>
+      </nav>
     </div>
   </header>
   <!--*************************************************************-->
-  <section class="tema">
-    <div class="indice">
-      <ol>
-        <li><a href="#4.1">Estructura cliente-servidor</a></li>
-        <li><a href="#4.2">Protocolo LDAP</a></li>
-        <li><a href="#4.3">Concepto de dominio. Subdominio. Requisitos necesarios para montar un dominio</a></li>
-        <li><a href="#4.4">Conceptos clave de Active Directory</a></li>
-        <li><a href="#4.5">Administración de cuentas. Cuentas predeterminadas</a></li>
-        <li><a href="#4.6">Contraseñas. Bloqueos de cuenta. Cuentas de usuarios y equipos</a></li>
-        <li><a href="#4.7">Perfiles móviles y obligatorios</a></li>
-        <li><a href="#4.8">Carpetas personales</a></li>
-        <li><a href="#4.9">Plantillas de usuario. Variables de entorno</a></li>
-        <li><a href="#4.10">Administración de grupos. Tipo. Estrategias de anidamiento. Grupos predeterminados</a></li>
-        <li><a href="#4.11">Instalación de Windows Server y Ubuntu Server</a></li>
-      </ol>
-    </div>
+    
   
   <!--*************************************************************-->
-  
+  <div class="tituloTema">
+    <h1>Tema 4.- Administración de dominios</h1>
+  </div>
     <a name="4.1"></a>
     <h3 class="subTitulo_3">>Introducción</h3>
     <article class="articuloApuntes">
@@ -572,3 +563,21 @@
   </section>
 </body>
 </html> 
+
+<!--
+<div class="indice">
+      <ol>
+        <li><a href="#4.1">Estructura cliente-servidor</a></li>
+        <li><a href="#4.2">Protocolo LDAP</a></li>
+        <li><a href="#4.3">Concepto de dominio. Subdominio. Requisitos necesarios para montar un dominio</a></li>
+        <li><a href="#4.4">Conceptos clave de Active Directory</a></li>
+        <li><a href="#4.5">Administración de cuentas. Cuentas predeterminadas</a></li>
+        <li><a href="#4.6">Contraseñas. Bloqueos de cuenta. Cuentas de usuarios y equipos</a></li>
+        <li><a href="#4.7">Perfiles móviles y obligatorios</a></li>
+        <li><a href="#4.8">Carpetas personales</a></li>
+        <li><a href="#4.9">Plantillas de usuario. Variables de entorno</a></li>
+        <li><a href="#4.10">Administración de grupos. Tipo. Estrategias de anidamiento. Grupos predeterminados</a></li>
+        <li><a href="#4.11">Instalación de Windows Server y Ubuntu Server</a></li>
+      </ol>
+    </div>
+-->
