--- a/daw/sistemas/temaDos.html
+++ b/daw/sistemas/temaDos.html
@@ -16,38 +16,28 @@
     <a name="top"></a>
     <div class="navtop">
       <span>Sistemas Informáticos</span>
-      <span><a href="../../index.html">Principal</a></span>
-    </div>
-    <div class="menuPrincipalAsignatura">
-      <a href="./sistemInfor.html">Tema 1</a>
-      <a href="./temaDos.html">Tema 2</a>
-      <a href="./temaTres.html">Tema 3</a>
-      <a href="./temaCuatro.html">Tema 4</a>
-      <a href="./temaCinco.html">Tema 5</a>
-      <a href="./temaSeis.html">Tema 6</a>
-    </div>
-    <div class="tituloTema">
-      <h1>Tema 2.- Administración de software base</h1>
+      <!--NUEVO MENU-->
+      <nav>
+        <ul class="navHorizontal">
+          <li>
+            <a href="../../index.html">Principal</a>
+            <ul class="navVertical">
+              <li><a href="./sistemInfor.html">Tema 1</a></li>
+              <li><a href="./temaDos.html">Tema 2</a></li>
+              <li><a href="./temaTres.html">Tema 3</a></li>
+              <li><a href="./temaCuatro.html">Tema 4</a></li>
+              <li><a href="./temaCinco.html">Tema 5</a></li>
+              <li><a href="./temaSeis.html">Tema 6</a></li>
+            </ul>
+          </li>
+        </ul>
+      </nav>
     </div>
   </header>
   <!--*************************************************************-->
-  <!--*************************************************************-->
-  <section class="tema">
-    <div class="indice">
-      <ol>
-        <li><a href="#2.1">Administración de usuarios y grupos locales</a></li>
-        <li><a href="#2.2">Seguridad de cuentas de usuario</a></li>
-        <li><a href="#2.3">Seguridad de contraseñas</a></li>
-        <li><a href="#2.4">Configuración del protocolo TCP/IP. Direcciones IP y máscaras de subred</a></li>
-        <li><a href="#2.5">Servicio de Nombres de Dominios (DNS)</a></li>
-        <li><a href="#2.6">Archivos de configuración de red</a></li>
-        <li><a href="#2.7">Optimización de sistemas para ordenadores portátiles. Archivos de red sin conexión</a></li>
-        <li><a href="#2.8">Principales comandos de sistemas operativos libres y propietarios</a></li>
-      </ol>
+    <div class="tituloTema">
+      <h1>Tema 2.- Administración de software base</h1>
     </div>
-  
-  <!--*************************************************************-->
-  
     <h3 class="subTitulo_3">Introducción</h3>
     <article class="articuloApuntes">
       <p>El <b>software base</b> es el programa encargado de controlar el ordenador.</p>
@@ -379,3 +369,20 @@
   </section>
 </body>
 </html> 
+
+<!-- 
+<section class="tema">
+    <div class="indice">
+      <ol>
+        <li><a href="#2.1">Administración de usuarios y grupos locales</a></li>
+        <li><a href="#2.2">Seguridad de cuentas de usuario</a></li>
+        <li><a href="#2.3">Seguridad de contraseñas</a></li>
+        <li><a href="#2.4">Configuración del protocolo TCP/IP. Direcciones IP y máscaras de subred</a></li>
+        <li><a href="#2.5">Servicio de Nombres de Dominios (DNS)</a></li>
+        <li><a href="#2.6">Archivos de configuración de red</a></li>
+        <li><a href="#2.7">Optimización de sistemas para ordenadores portátiles. Archivos de red sin conexión</a></li>
+        <li><a href="#2.8">Principales comandos de sistemas operativos libres y propietarios</a></li>
+      </ol>
+    </div>
+
+-->
