--- a/daw/sistemas/temaTres.html
+++ b/daw/sistemas/temaTres.html
@@ -16,40 +16,28 @@
     <a name="top"></a>
     <div class="navtop">
       <span>Sistemas Informáticos</span>
-      <span><a href="../../index.html">Principal</a></span>
-    </div>
-    <div class="menuPrincipalAsignatura">
-      <a href="./sistemInfor.html">Tema 1</a>
-      <a href="./temaDos.html">Tema 2</a>
-      <a href="./temaTres.html">Tema 3</a>
-      <a href="./temaCuatro.html">Tema 4</a>
-      <a href="./temaCinco.html">Tema 5</a>
-      <a href="./temaSeis.html">Tema 6</a>
-    </div>
-    <div class="tituloTema">
-      <h1>Tema 3.- Administración de la información</h1>
+      <!--NUEVO MENU-->
+      <nav>
+        <ul class="navHorizontal">
+          <li>
+            <a href="../../index.html">Principal</a>
+            <ul class="navVertical">
+              <li><a href="./sistemInfor.html">Tema 1</a></li>
+              <li><a href="./temaDos.html">Tema 2</a></li>
+              <li><a href="./temaTres.html">Tema 3</a></li>
+              <li><a href="./temaCuatro.html">Tema 4</a></li>
+              <li><a href="./temaCinco.html">Tema 5</a></li>
+              <li><a href="./temaSeis.html">Tema 6</a></li>
+            </ul>
+          </li>
+        </ul>
+      </nav>
     </div>
   </header>
   <!--*************************************************************-->
-  <section class="tema">
-    <div class="indice">
-      <ol>
-        <li><a href="#3.1">Sistemas de archivos</a></li>
-        <li><a href="#3.2">Tipos de sistemas de archivos</a></li>
-        <li><a href="#3.3">Gestión de sistemas de archivos mediante comandos y entornos gráficos</a></li>
-        <li><a href="#3.4">Gestión de enlaces</a></li>
-        <li><a href="#3.5">Estructura de directorios de sistemas operativos libres y propietarios</a></li>
-        <li><a href="#3.6">Búsqueda de información del sistema mediante comandos y herramientas gráficas</a></li>
-        <li><a href="#3.7">Identificación del software instalado mediante comandos y herramientas gráficas</a></li>
-        <li><a href="#3.8">Gestión de la información del sistema. Rendimiento. Estadísticas</a></li>
-        <li><a href="#3.9">Montaje y desmontaje de dispositivos en sistemas operativos</a></li>
-        <li><a href="#3.10">Automatización</a></li>
-        <li><a href="#3.11">Herramientas de administración de discos. Particiones y volúmenes. Desfragmentación y revisión</a></li>
-      </ol>
-    </div>
-  
-  <!--*************************************************************-->
-  
+  <div class="tituloTema">
+    <h1>Tema 3.- Administración de la información</h1>
+  </div>
     <a name="3.1"></a>
     <h3 class="subTitulo_3">Introducción</h3>
     <article class="articuloApuntes">
@@ -553,3 +541,21 @@
   </section>
 </body>
 </html> 
+
+<!--
+<div class="indice">
+      <ol>
+        <li><a href="#3.1">Sistemas de archivos</a></li>
+        <li><a href="#3.2">Tipos de sistemas de archivos</a></li>
+        <li><a href="#3.3">Gestión de sistemas de archivos mediante comandos y entornos gráficos</a></li>
+        <li><a href="#3.4">Gestión de enlaces</a></li>
+        <li><a href="#3.5">Estructura de directorios de sistemas operativos libres y propietarios</a></li>
+        <li><a href="#3.6">Búsqueda de información del sistema mediante comandos y herramientas gráficas</a></li>
+        <li><a href="#3.7">Identificación del software instalado mediante comandos y herramientas gráficas</a></li>
+        <li><a href="#3.8">Gestión de la información del sistema. Rendimiento. Estadísticas</a></li>
+        <li><a href="#3.9">Montaje y desmontaje de dispositivos en sistemas operativos</a></li>
+        <li><a href="#3.10">Automatización</a></li>
+        <li><a href="#3.11">Herramientas de administración de discos. Particiones y volúmenes. Desfragmentación y revisión</a></li>
+      </ol>
+    </div>
+-->
