--- a/daw/sistemas/temaSeis.html
+++ b/daw/sistemas/temaSeis.html
@@ -16,35 +16,28 @@
     <a name="top"></a>
     <div class="navtop">
       <span>Sistemas Informáticos</span>
-      <span><a href="../../index.html">Principal</a></span>
-    </div>
-    <div class="menuPrincipalAsignatura">
-      <a href="./sistemInfor.html">Tema 1</a>
-      <a href="./temaDos.html">Tema 2</a>
-      <a href="./temaTres.html">Tema 3</a>
-      <a href="./temaCuatro.html">Tema 4</a>
-      <a href="./temaCinco.html">Tema 5</a>
-      <a href="./temaSeis.html">Tema 6</a>
-    </div>
-    <div class="tituloTema">
-      <h1>Tema 6.- Resolución de incidencias y asistencia técnica</h1>
+      <!--NUEVO MENU-->
+      <nav>
+        <ul class="navHorizontal">
+          <li>
+            <a href="../../index.html">Principal</a>
+            <ul class="navVertical">
+              <li><a href="./sistemInfor.html">Tema 1</a></li>
+              <li><a href="./temaDos.html">Tema 2</a></li>
+              <li><a href="./temaTres.html">Tema 3</a></li>
+              <li><a href="./temaCuatro.html">Tema 4</a></li>
+              <li><a href="./temaCinco.html">Tema 5</a></li>
+              <li><a href="./temaSeis.html">Tema 6</a></li>
+            </ul>
+          </li>
+        </ul>
+      </nav>
     </div>
   </header>
   <!--*************************************************************-->
-  <section class="tema">
-    <div class="indice">
-      <ol>
-        <li><a href="#6.1">Interpretación, análisis y elaboración de documentación técnica. Interpretación, análisis y elaboración de manuales de instalación</a></li>
-        <li><a href="#6.2">Instalación y configuración de sistemas operativos y aplicaciones. Licencias de cliente y licencias de servidor</a></li>
-        <li><a href="#6.3">Instalaciones desatendidas e implementación de archivos de respuesta</a></li>
-        <li><a href="#6.4">Servidores de actualizaciones automáticas</a></li>
-        <li><a href="#6.5">Partes de incidencias y protocolos de actuación</a></li>
-        <li><a href="#6.6">Administración remota</a></li>
-      </ol>
-    </div>
-    
-  <!--*************************************************************-->
-  
+  <div class="tituloTema">
+    <h1>Tema 6.- Resolución de incidencias y asistencia técnica</h1>
+  </div>
     <article class="articuloApuntes">
       <h3 class="subTitulo_3">Introducción</h3>
     </article>
@@ -87,3 +80,16 @@
   </section>
 </body>
 </html> 
+
+<!--
+  <div class="indice">
+      <ol>
+        <li><a href="#6.1">Interpretación, análisis y elaboración de documentación técnica. Interpretación, análisis y elaboración de manuales de instalación</a></li>
+        <li><a href="#6.2">Instalación y configuración de sistemas operativos y aplicaciones. Licencias de cliente y licencias de servidor</a></li>
+        <li><a href="#6.3">Instalaciones desatendidas e implementación de archivos de respuesta</a></li>
+        <li><a href="#6.4">Servidores de actualizaciones automáticas</a></li>
+        <li><a href="#6.5">Partes de incidencias y protocolos de actuación</a></li>
+        <li><a href="#6.6">Administración remota</a></li>
+      </ol>
+    </div>
+-->
