--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
           </div>
         </a>
         <!----------------------------------------->
-        <a href="./daw/proDos/indice.html">
+        <a href="./daw/proDos/indiceProDos.html">
         <div class="card">
             <div class="tituloCard"><strong>Programación II</strong></div>
             <img src="" alt="">
@@ -58,7 +58,7 @@
           </div>
         </a>
         <!----------------------------------------->
-        <a href="./daw/bdUno/indice.html">
+        <a href="./daw/bdUno/indiceBdUno.html">
           <div class="card">
             <div class="tituloCard"><strong>Bases de Datos I</strong></div>
             <img src="" alt="">
@@ -71,7 +71,7 @@
           </div>
         </a>
         <!----------------------------------------->
-        <a href="./daw/Len_Marcas/indice.html">
+        <a href="./daw/Len_Marcas/indiceLen_Marcas.html">
           <div class="card">
             <div class="tituloCard"><strong>Lenguajes de Marcas</strong></div>
             <img src="" alt="">
